--- a/public/index.html
+++ b/public/index.html
@@ -347,7 +347,7 @@
         class="flex flex-col lg:flex-row justify-center items-center gap-5 my-20 mx-10 lg:mx-40"
       >
         <div
-          class="card bg-black/10 px-10 py-5 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
+          class="card bg-black/10 w-full px-10 py-5 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
         >
           <div class="flex gap-2 items-center">
             <div class="bg-(--color-accent)/20 p-3 rounded-2xl">
@@ -389,7 +389,7 @@
         </div>
 
         <div
-          class="card bg-black/10 py-5 px-10 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
+          class="card bg-black/10 w-full py-5 px-10 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
         >
           <div class="flex gap-2 items-center">
             <div class="bg-(--color-accent)/20 p-3 rounded-2xl">
@@ -429,7 +429,7 @@
         </div>
 
         <div
-          class="card bg-black/10 py-5 px-10 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
+          class="card bg-black/10 w-full py-5 px-10 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
         >
           <div class="flex gap-2 items-center">
             <div class="bg-(--color-accent)/20 p-3 rounded-2xl">
@@ -943,7 +943,7 @@
                   class="flex flex-col md:flex-row items-center gap-3 md:gap-5 text-lg md:text-2xl"
                 >
                   <div
-                    class="flex-1 flex items-center gap-2 bg-(--color-background) px-5 md:px-10 py-3 md:py-5 border border-red-400 rounded-2xl"
+                    class="flex-1 w-full flex items-center gap-2 bg-(--color-background) px-5 md:px-10 py-3 md:py-5 border border-red-400 rounded-2xl"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -966,7 +966,7 @@
                   </div>
 
                   <div
-                    class="flex-1 flex items-center gap-2 bg-(--color-background) px-5 md:px-10 py-3 md:py-5 border border-red-400 rounded-2xl"
+                    class="flex-1 w-full flex items-center gap-2 bg-(--color-background) px-5 md:px-10 py-3 md:py-5 border border-red-400 rounded-2xl"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -999,7 +999,7 @@
                   My Role & Responsibilities
                 </h3>
 
-                <p class="text-xl">
+                <p class="text-base md:text-lg">
                   As the Fullstack Engineer, I managed both frontend and backend
                   development, building the architecture from the ground up to
                   deployment. I implemented responsive interfaces while also
@@ -1008,7 +1008,7 @@
                 </p>
 
                 <div class="space-y-5">
-                  <div class="flex gap-2 items-center">
+                  <div class="flex gap-2 items-start md:items-center">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -1019,18 +1019,18 @@
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
-                      class="lucide lucide-circle-check-icon lucide-circle-check"
+                      class="w-10 h-10 md:w-6 md:h-6 lucide lucide-circle-check-icon lucide-circle-check"
                     >
                       <circle cx="12" cy="12" r="10" />
                       <path d="m9 12 2 2 4-4" />
                     </svg>
-                    <p class="text-lg">
+                    <p class="text-sm md:text-lg">
                       Designing and building the fullstack architecture for
                       scalable e-commerce functionality
                     </p>
                   </div>
 
-                  <div class="flex gap-2 items-center">
+                  <div class="flex gap-2 items-start md:items-center">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -1041,18 +1041,18 @@
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
-                      class="lucide lucide-circle-check-icon lucide-circle-check"
+                      class="w-10 md:w-6 md:h-6 lucide lucide-circle-check-icon lucide-circle-check"
                     >
                       <circle cx="12" cy="12" r="10" />
                       <path d="m9 12 2 2 4-4" />
                     </svg>
-                    <p class="text-lg">
+                    <p class="text-sm md:text-lg">
                       Developing responsive, reusable React components with
                       Tailwind CSS
                     </p>
                   </div>
 
-                  <div class="flex gap-2 items-center">
+                  <div class="flex gap-2 items-start md:items-center">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -1063,12 +1063,12 @@
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
-                      class="lucide lucide-circle-check-icon lucide-circle-check"
+                      class="w-10 h-10 md:w-6 md:h-6 lucide lucide-circle-check-icon lucide-circle-check"
                     >
                       <circle cx="12" cy="12" r="10" />
                       <path d="m9 12 2 2 4-4" />
                     </svg>
-                    <p class="text-lg">
+                    <p class="text-sm md:text-lg">
                       Integrating APIs and managing data flow for dynamic
                       product listings and user interactions
                     </p>
@@ -1103,7 +1103,7 @@
                     stroke-width="2"
                     stroke-linecap="round"
                     stroke-linejoin="round"
-                    class="lucide lucide-check-icon lucide-check"
+                    class="hidden md:block lucide lucide-check-icon lucide-check"
                   >
                     <path d="M20 6 9 17l-5-5" />
                   </svg>
@@ -1131,7 +1131,7 @@
                     stroke-width="2"
                     stroke-linecap="round"
                     stroke-linejoin="round"
-                    class="lucide lucide-check-icon lucide-check"
+                    class="hidden md:block lucide lucide-check-icon lucide-check"
                   >
                     <path d="M20 6 9 17l-5-5" />
                   </svg>
@@ -1159,7 +1159,7 @@
                     stroke-width="2"
                     stroke-linecap="round"
                     stroke-linejoin="round"
-                    class="lucide lucide-check-icon lucide-check"
+                    class="hidden md:block lucide lucide-check-icon lucide-check"
                   >
                     <path d="M20 6 9 17l-5-5" />
                   </svg>
@@ -1266,6 +1266,7 @@
       </div>
     </section>
 
+    <!-- ......... CONTACT SECTION .............. -->
     <section id="contact" class="py-20 px-10 lg:px-40">
       <div
         class="flex flex-col justify-center items-center text-center space-y-5 w-full mx-auto"
@@ -1301,6 +1302,7 @@
       </div>
     </section>
 
+    <!-- ......... FOOTER .............. -->
     <footer class="pt-20 pb-5 border-t border-gray-400">
       <div class="px-10 lg:px-40 w-full mx-auto text-center space-y-10">
         <div class="space-y-2">
