contact and footer adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -719,7 +719,7 @@
     </section>
 
     <!-- ......... CASE STUDY SECTION .............. -->
-    <section id="case-study">
+    <section id="case-study " class="py-20">
       <div class="mx-10 lg:mx-40">
         <div class="relative flex items-center">
           <div
@@ -1267,15 +1267,18 @@
     </section>
 
     <!-- ......... CONTACT SECTION .............. -->
-    <section id="contact" class="py-20 px-10 lg:px-40">
+    <section
+      id="contact"
+      class="py-20 px-10 lg:px-40 bg-(--color-background-secondary)"
+    >
       <div
         class="flex flex-col justify-center items-center text-center space-y-5 w-full mx-auto"
       >
-        <h1 class="text-4xl font-bold">
+        <h1 class="text-4xl md:text-5xl font-bold">
           Have an Idea? <br />
           Let's build it.
         </h1>
-        <p>
+        <p class="md:w-1/2">
           Ready to turn your concepts into reality? I specialize in building
           responsive, accessible web experiences. Reach out and let's start the
           conversation.
@@ -1303,7 +1306,9 @@
     </section>
 
     <!-- ......... FOOTER .............. -->
-    <footer class="pt-20 pb-5 border-t border-gray-400">
+    <footer
+      class="pt-20 pb-5 border-t border-gray-400 bg-(--color-background-secondary)"
+    >
       <div class="px-10 lg:px-40 w-full mx-auto text-center space-y-10">
         <div class="space-y-2">
           <h1 class="text-3xl font-bold">Pharez</h1>
