--- a/public/index.html
+++ b/public/index.html
@@ -347,7 +347,7 @@
         class="flex flex-col lg:flex-row justify-center items-center gap-5 my-20 mx-10 lg:mx-40"
       >
         <div
-          class="card bg-black/10 w-full px-10 py-5 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
+          class="card w-full px-10 py-5 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
         >
           <div class="flex gap-2 items-center">
             <div class="bg-(--color-accent)/20 p-3 rounded-2xl">
@@ -389,7 +389,7 @@
         </div>
 
         <div
-          class="card bg-black/10 w-full py-5 px-10 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
+          class="card w-full py-5 px-10 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
         >
           <div class="flex gap-2 items-center">
             <div class="bg-(--color-accent)/20 p-3 rounded-2xl">
@@ -429,7 +429,7 @@
         </div>
 
         <div
-          class="card bg-black/10 w-full py-5 px-10 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
+          class="card w-full py-5 px-10 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
         >
           <div class="flex gap-2 items-center">
             <div class="bg-(--color-accent)/20 p-3 rounded-2xl">
