glow added to case study

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <title>Pharez Oyelade</title>
     <link href="output.css" rel="stylesheet" />
     <script src="./script.js"></script>
-    <script src="./skills.js"></script>
   </head>
   <body>
     <div class="cursor hidden lg:flex"></div>
@@ -719,7 +718,11 @@
     </section>
 
     <!-- ......... CASE STUDY SECTION .............. -->
-    <section id="case-study " class="py-20">
+    <section id="case-study " class="relative py-20">
+      <!-- Background Glow -->
+      <div
+        class="absolute top-0 right-0 w-200 h-200 bg-blue-500/20 rounded-full blur-[120px] pointer-events-none"
+      ></div>
       <div class="mx-10 lg:mx-40">
         <div class="relative flex items-center">
           <div
