--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <header
       class="fixed top-0 left-0 right-0 flex justify-between items-center px-[5%] py-6 z-50"
     >
-      <h1 class="text-2xl font-bold tracking-tighter">Pharez</h1>
+      <a href="#hero" class="text-2xl font-bold tracking-tighter">Pharez</a>
 
       <nav
         class="hidden md:flex gap-8 items-center bg-white/5 backdrop-blur-lg z-20 px-6 py-2 rounded-full border border-white/10"
@@ -1325,7 +1325,7 @@
           <a href="#hero">Home</a>
           <a href="#about">About</a>
           <a href="#skills">Skills</a>
-          <a href="#home">Work</a>
+          <a href="#projects">Work</a>
         </div>
 
         <div class="flex gap-4 justify-center">
