toogle icons fix

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,8 @@
       >
         <!-- Sun Icon (showing in dark mode) -->
         <svg
-          class="w-5 h-5 hidden dark:block"
+          id="sun"
+          class="w-5 h-5"
           fill="none"
           stroke="currentColor"
           viewBox="0 0 24 24"
@@ -66,7 +67,8 @@
         </svg>
         <!-- Moon Icon (showing in light mode) -->
         <svg
-          class="w-5 h-5 block dark:hidden"
+          id="moon"
+          class="w-5 h-5"
           fill="none"
           stroke="currentColor"
           viewBox="0 0 24 24"
