meta tags and favicon added

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pharez Oyelade</title>
+    <meta name="description" content="Pharez Oyelade's Portfolio" />
+    <meta name="robots" content="index, follow" />
+
+    <meta property="og:title" content="Pharez Oyelade - Developer Portfolio" />
+    <meta
+      property="og:description"
+      content="Pharez Oyelade's Developer Portfolio"
+    />
+    <meta
+      property="og:image"
+      content="https://pharez-portfolio.vercel.app/pharez_profile-removebg-preview.png"
+    />
+    <meta property="og:url" content="https://pharez-portfolio.vercel.app/" />
+
+    <title>Pharez Oyelade - Portfolio</title>
+    <link rel="icon" href="favicon.ico" type="image" />
+
     <link href="output.css" rel="stylesheet" />
     <script src="./script.js"></script>
   </head>
