--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,9 @@
       <div
         class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-200 h-200 bg-blue-500/10 rounded-full blur-[120px] pointer-events-none"
       ></div>
+      <!-- <div
+        class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-200 h-200 bg-red-500/10 rounded-full blur-[120px] pointer-events-none"
+      ></div> -->
 
       <!-- Main Content Container -->
       <div class="flex-1 flex flex-col justify-center items-center w-full">
@@ -132,8 +135,8 @@
         <h1
           class="text-4xl sm:text-5xl md:text-7xl font-extrabold tracking-tight mb-4 md:mb-6 max-w-4xl text-(--color-text-primary) leading-tight animate-fade-in-up delay-100"
         >
-          Crafting Performant <br />
-          <span class="text-gradient">Web Interfaces.</span>
+          I'm Pharez <br />
+          <span class="text-gradient">A Web Developer</span>
         </h1>
 
         <!-- Subtext -->
@@ -368,7 +371,7 @@
         class="flex flex-col lg:flex-row justify-center items-center gap-5 my-20 mx-10 lg:mx-40"
       >
         <div
-          class="card w-full px-10 py-5 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-blue-200 hover:-translate-y-1 transition-all ease-in"
+          class="card w-full px-10 py-5 rounded-xl border border-gray-500 hover:border-(--color-accent) shadow-2xl hover:shadow-red-200 hover:-translate-y-1 transition-all ease-in"
         >
           <div class="flex gap-2 items-center">
             <div class="bg-(--color-accent)/20 p-3 rounded-2xl">
@@ -378,7 +381,7 @@
                 height="24"
                 viewBox="0 0 24 24"
                 fill="none"
-                stroke="#2563eb"
+                stroke="#f63b3b"
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
@@ -420,7 +423,7 @@
                 height="24"
                 viewBox="0 0 24 24"
                 fill="none"
-                stroke="#2563eb"
+                stroke="#f63b3b"
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
@@ -460,7 +463,7 @@
                 height="24"
                 viewBox="0 0 24 24"
                 fill="none"
-                stroke="#2563eb"
+                stroke="#f63b3b"
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
@@ -495,9 +498,9 @@
       <div class="mx-10 lg:mx-40">
         <div class="relative flex items-center">
           <div
-            class="absolute top-1/2 translate-y-1/2 left-0 w-10 text-blue-500 bg-blue-500 border border-blue-500"
+            class="absolute top-1/2 translate-y-1/2 left-0 w-10 text-red-500 bg-red-500 border border-red-500"
           ></div>
-          <p class="indicator-text px-12 text-blue-500 font-bold">PORTFOLIO</p>
+          <p class="indicator-text px-12 text-red-500 font-bold">PORTFOLIO</p>
         </div>
 
         <h1 class="text-4xl lg:text-7xl font-extrabold py-5">Selected Work</h1>
@@ -743,17 +746,19 @@
     <section id="case-study " class="relative py-20">
       <!-- Background Glow -->
       <div
-        class="absolute top-0 right-0 w-200 h-200 bg-blue-500/20 rounded-full blur-[120px] pointer-events-none"
+        class="absolute top-0 right-0 w-200 h-200 bg-blue-500/10 rounded-full blur-[120px] pointer-events-none"
       ></div>
       <div class="mx-10 lg:mx-40">
         <div class="relative flex items-center">
           <div
-            class="absolute top-1/2 translate-y-1/2 left-0 w-10 text-blue-500 bg-blue-500 border border-blue-500"
+            class="absolute top-1/2 translate-y-1/2 left-0 w-10 text-red-500 bg-red-500 border border-red-500"
           ></div>
-          <p class="indicator-text px-12 text-blue-500 font-bold">CASE STUDY</p>
+          <p class="indicator-text px-12 text-red-500 font-bold">CASE STUDY</p>
         </div>
 
-        <h1 class="text-3xl md:text-5xl lg:text-6xl font-extrabold pt-5">
+        <h1
+          class="text-3xl md:text-5xl lg:text-6xl font-extrabold pt-5 text-gradient"
+        >
           Project Aesthesia:
         </h1>
         <h2
@@ -820,7 +825,7 @@
               <div class="relative">
                 <h4 class="pl-3 font-bold text-lg">CONTENTS</h4>
                 <div
-                  class="absolute top-1/2 -translate-y-1/2 left-0 w-0.5 h-5 border border-blue-500 bg-blue-500"
+                  class="absolute top-1/2 -translate-y-1/2 left-0 w-0.5 h-5 border border-red-500 bg-red-500"
                 ></div>
               </div>
 
@@ -943,7 +948,7 @@
                     The Problem
                   </h3>
                   <div
-                    class="absolute top-1/2 -translate-y-1/2 left-0 w-1 h-5 border border-blue-500 bg-blue-500"
+                    class="absolute top-1/2 -translate-y-1/2 left-0 w-1 h-5 border border-red-500 bg-red-500"
                   ></div>
                 </div>
 
@@ -1040,7 +1045,7 @@
                       height="24"
                       viewBox="0 0 24 24"
                       fill="none"
-                      stroke="blue"
+                      stroke="red"
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
@@ -1062,7 +1067,7 @@
                       height="24"
                       viewBox="0 0 24 24"
                       fill="none"
-                      stroke="blue"
+                      stroke="red"
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
@@ -1084,7 +1089,7 @@
                       height="24"
                       viewBox="0 0 24 24"
                       fill="none"
-                      stroke="blue"
+                      stroke="red"
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
@@ -1242,7 +1247,7 @@
                 class="flex flex-col md:flex-row gap-3 md:gap-5 items-stretch"
               >
                 <div
-                  class="card text-center bg-(--color-background-secondary) p-8 md:p-10 rounded-2xl border border-transparent hover:border-blue-500 transition-all ease-in group space-y-2 w-full md:w-[30%] h-auto md:h-64"
+                  class="card text-center bg-(--color-background-secondary) p-8 md:p-10 rounded-2xl border border-transparent hover:border-red-500 transition-all ease-in group space-y-2 w-full md:w-[30%] h-auto md:h-64"
                 >
                   <p
                     class="text-(--color-accent) text-5xl md:text-7xl font-bold group-hover:scale-[1.05] transition-transform ease-in"
@@ -1258,7 +1263,7 @@
                 </div>
 
                 <div
-                  class="card text-center bg-(--color-background-secondary) p-8 md:p-10 rounded-2xl border border-transparent hover:border-blue-500 transition-all ease-in group space-y-2 w-full md:w-[30%] h-auto md:h-64"
+                  class="card text-center bg-(--color-background-secondary) p-8 md:p-10 rounded-2xl border border-transparent hover:border-red-500 transition-all ease-in group space-y-2 w-full md:w-[30%] h-auto md:h-64"
                 >
                   <p
                     class="text-(--color-accent) text-5xl md:text-7xl font-bold group-hover:scale-[1.05] transition-transform ease-in"
@@ -1272,7 +1277,7 @@
                 </div>
 
                 <div
-                  class="card text-center bg-(--color-background-secondary) p-8 md:p-10 rounded-2xl border border-transparent hover:border-blue-500 transition-all ease-in group space-y-2 w-full md:w-[30%] h-auto md:h-64"
+                  class="card text-center bg-(--color-background-secondary) p-8 md:p-10 rounded-2xl border border-transparent hover:border-red-500 transition-all ease-in group space-y-2 w-full md:w-[30%] h-auto md:h-64"
                 >
                   <p
                     class="text-(--color-accent) text-5xl md:text-7xl font-bold group-hover:scale-[1.05] transition-transform ease-in"
