Update hero section height to 100dvh

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
 
     <section
       id="hero"
-      class="relative min-h-screen flex flex-col justify-center items-center text-center px-4 pt-20 pb-20 overflow-hidden"
+      class="relative min-h-[100dvh] flex flex-col justify-center items-center text-center px-4 pt-20 pb-20 overflow-hidden"
     >
       <!-- Background Glow -->
       <div
