cawe study article links axtive class

--- a/public/index.html
+++ b/public/index.html
@@ -830,7 +830,7 @@
               </div>
 
               <!-- case study article links -->
-              <div class="mt-10 flex flex-col gap-5">
+              <div class="mt-10 flex flex-col gap-5" id="aside-links">
                 <div class="text-md">
                   <a href="#case-problem" class="flex items-center gap-2"
                     ><svg
@@ -937,7 +937,7 @@
           </aside>
 
           <!-- case study article--right -->
-          <div class="flex-1 space-y-20">
+          <div class="flex-1 space-y-20" id="article-content">
             <!-- The problem -->
             <div id="case-problem">
               <div
