footer links adjustmets

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
 
     <section
       id="hero"
-      class="relative min-h-[100dvh] flex flex-col justify-center items-center text-center px-4 pt-20 pb-20 overflow-hidden"
+      class="relative min-h-dvh flex flex-col justify-center items-center text-center px-4 pt-20 pb-20 overflow-hidden"
     >
       <!-- Background Glow -->
       <div
@@ -1349,10 +1349,26 @@
         </div>
 
         <div class="flex justify-center items-center gap-5 text-sm">
-          <a href="#hero">Home</a>
-          <a href="#about">About</a>
-          <a href="#skills">Skills</a>
-          <a href="#projects">Work</a>
+          <a
+            class="hover:text-(--color-accent) hover:scale-[1.05] transition-all ease-in-out font-bold"
+            href="#hero"
+            >Home</a
+          >
+          <a
+            class="hover:text-(--color-accent) hover:scale-[1.05] transition-all ease-in-out font-bold"
+            href="#about"
+            >About</a
+          >
+          <a
+            class="hover:text-(--color-accent) hover:scale-[1.05] transition-all ease-in-out font-bold"
+            href="#skills"
+            >Skills</a
+          >
+          <a
+            class="hover:text-(--color-accent) hover:scale-[1.05] transition-all ease-in-out font-bold"
+            href="#projects"
+            >Work</a
+          >
         </div>
 
         <div class="flex gap-4 justify-center">
