about section minor edits

--- a/public/index.html
+++ b/public/index.html
@@ -265,10 +265,10 @@
     <!-- ......... ABOUT SECTION .............. -->
     <section id="about" class="animate-fade-in">
       <div
-        class="my-20 mx-10 flex flex-col-reverse gap-20 lg:flex-row justify-center items-center"
+        class="my-40 mx-10 flex flex-col-reverse gap-20 lg:flex-row justify-center items-center"
       >
         <div
-          class="relative w-85 h-85 rounded-full overflow-hidden border-5 border-(--color-border)"
+          class="relative w-85 h-85 rounded-full overflow-hidden border-5 border-(--color-border) hover:border-(--color-accent) transition-all duration-300 card"
         >
           <img
             src="./pharez_profile-removebg-preview.png"
