--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
         >
           <a
             href="#projects"
-            class="group relative px-6 md:px-8 py-3 md:py-3.5 bg-(--color-accent) hover:scale-[1.02] hover:bg-(--color-accent-hover) text-white font-semibold rounded-lg transition-all hover:shadow-[0_0_20px_rgba(37,99,235,0.4)] flex items-center justify-center gap-2 text-sm md:text-base"
+            class="group relative px-6 md:px-8 py-3 md:py-3.5 bg-(--color-accent) hover:scale-105 active:scale-95 hover:bg-(--color-accent-hover) text-white font-semibold rounded-lg transition-all hover:shadow-[0_0_20px_rgba(37,99,235,0.4)] flex items-center justify-center gap-2 text-sm md:text-base"
           >
             See My Work
             <svg
@@ -175,7 +175,7 @@
           </a>
           <a
             href="#contact"
-            class="px-6 md:px-8 py-3 md:py-3.5 border border-(--color-border) hover:border-(--color-accent) hover:scale-[1.02] text-(--color-text-primary) hover:bg-(--color-card-bg) font-medium rounded-lg transition-all flex items-center justify-center gap-2 text-sm md:text-base"
+            class="px-6 md:px-8 py-3 md:py-3.5 border border-(--color-border) hover:border-(--color-accent) hover:scale-105 active:scale-95 text-(--color-text-primary) hover:bg-(--color-card-bg) font-medium rounded-lg transition-all flex items-center justify-center gap-2 text-sm md:text-base"
           >
             Get in Touch
             <svg
@@ -263,7 +263,7 @@
     </section>
 
     <!-- ......... ABOUT SECTION .............. -->
-    <section id="about" class="animate-fade-in">
+    <section id="about" class="reveal">
       <div
         class="my-40 mx-10 flex flex-col-reverse gap-20 lg:flex-row justify-center items-center"
       >
@@ -273,23 +273,23 @@
           <img
             src="./pharez_profile-removebg-preview.png"
             alt=""
-            class="w-full h-auto scale-[1.05] hover:scale-[1.15] transition-transform ease-in duration-300 absolute -top-15"
+            class="w-full h-auto scale-[1.05] hover:scale-[1.15] transition-transform ease-in duration-300 absolute -top-15 reveal delay-500"
           />
         </div>
 
         <div class="max-w-2xl flex flex-col gap-5">
-          <h1 class="text-3xl md:text-5xl font-extrabold">
+          <h1 class="text-3xl md:text-5xl font-extrabold reveal delay-200">
             Building digital experiences with heart and logic
           </h1>
 
-          <p class="text-(--color-text-secondary) text-lg">
+          <p class="text-(--color-text-secondary) text-lg reveal delay-300">
             I’m Pharez, a frontend-focused developer passionate about building
             modern web products. I enjoy solving real problems through clean UI,
             solid logic, and scalable frontend architecture. I specialize in the
             React ecosystem.
           </p>
 
-          <p class="text-(--color-text-secondary) text-lg">
+          <p class="text-(--color-text-secondary) text-lg reveal delay-300">
             When I’m not wrestling with layouts or debugging state, I’m usually
             thinking through product ideas or refining how things should feel,
             not just how they work.
@@ -358,7 +358,7 @@
 
     <!-- ......... SKILLS SECTION .............. -->
     <section id="skills" class="py-20 bg-(--color-background-secondary)">
-      <div class="flex flex-col gap-5 text-center">
+      <div class="flex flex-col gap-5 text-center reveal delay-200">
         <h1 class="text-5xl font-bold">Skills & Technologies</h1>
         <p class="text-(--color-text-secondary)">
           I build accessible, high-performance interfaces with the modern web
@@ -371,7 +371,7 @@
         class="flex flex-col lg:flex-row justify-center items-center gap-5 my-20 mx-10 lg:mx-40"
       >
         <div
-          class="card w-full px-10 py-5 rounded-xl border-2 border-gray-500 hover:border-(--color-accent) shadow-lg hover:shadow-red-200 hover:-translate-y-1 transition-all ease-in"
+          class="card w-full px-10 py-5 rounded-xl border-2 border-gray-500 hover:border-(--color-accent) shadow-lg hover:shadow-red-200 hover:-translate-y-1 transition-all ease-in reveal delay-200"
         >
           <div class="flex gap-2 items-center">
             <div class="bg-(--color-accent)/20 p-3 rounded-2xl">
@@ -413,7 +413,7 @@
         </div>
 
         <div
-          class="card w-full py-5 px-10 rounded-xl border-2 border-gray-500 hover:border-(--color-accent) shadow-lg hover:shadow-red-200 hover:-translate-y-1 transition-all ease-in"
+          class="card w-full py-5 px-10 rounded-xl border-2 border-gray-500 hover:border-(--color-accent) shadow-lg hover:shadow-red-200 hover:-translate-y-1 transition-all ease-in reveal delay-300"
         >
           <div class="flex gap-2 items-center">
             <div class="bg-(--color-accent)/20 p-3 rounded-2xl">
@@ -453,7 +453,7 @@
         </div>
 
         <div
-          class="card w-full py-5 px-10 rounded-xl border-2 border-gray-500 hover:border-(--color-accent) shadow-lg hover:shadow-red-200 hover:-translate-y-1 transition-all ease-in"
+          class="card w-full py-5 px-10 rounded-xl border-2 border-gray-500 hover:border-(--color-accent) shadow-lg hover:shadow-red-200 hover:-translate-y-1 transition-all ease-in reveal delay-500"
         >
           <div class="flex gap-2 items-center">
             <div class="bg-(--color-accent)/20 p-3 rounded-2xl">
@@ -1315,7 +1315,7 @@
         </p>
         <a
           href="mailto:pharezoyelade@gmail.com?subject=Project Inquiry"
-          class="group relative px-8 py-3.5 bg-(--color-accent) hover:bg-(--color-accent-hover) text-white font-semibold rounded-lg transition-all hover:shadow-[0_0_20px_rgba(37,99,235,0.4)] flex items-center justify-center gap-2"
+          class="group relative px-8 py-3.5 bg-(--color-accent) hover:bg-(--color-accent-hover) hover:scale-102 active:scale-95 text-white font-semibold rounded-lg transition-all hover:shadow-[0_0_20px_rgba(37,99,235,0.4)] flex items-center justify-center gap-2"
         >
           Contact Me
           <svg
